--- a/WebContent/index.xhtml
+++ b/WebContent/index.xhtml
@@ -2,7 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:p="http://primefaces.org/ui">
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:c="http://java.sun.com/jsp/jstl/core"
+	
+>
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Upload Blob</title>
@@ -13,10 +16,17 @@
 		<p:outputLabel value="Nome: " for="nome"/>
 		<p:inputText value="#{usuarioController.usuario.nome}" id="nome" />
 		<br/>
-		<p:fileUpload label="Arquivo" mode="simple" skinSimple="true"/>
+		<p:fileUpload label="Arquivo" value="#{usuarioController.file}" mode="simple" skinSimple="true"/>
 		<br/>
 		<h:commandButton value="Cadastrar" action="#{usuarioController.addUsuario()}" />
 	</h:form>
+	
+	<c:forEach var="u" items="#{usuarioController.listUsuarios()}">
+		<h:outputText value="#{u.nome}" /> <br/>
+		<h:graphicImage url="imagem/?id=#{u.id}" width="200px"/>
+		
+		<br/><br/>
+	</c:forEach>
 
 </h:body>
 </html>
